mgmt api: add "storeOffline" param to POST /instant-message
